package com.liyi.design.pattern.structure.flyweight;

public abstract class WebSite {

    abstract void use(User user);
}
